-Fixed image positioning -Allow compiling for Mac AND Windows